<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Tela"
    tools:context=".TelaAdicionar">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_adicionar"
        style="@style/Subtitulo"
        android:width="330dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tv_adicionar"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        style="@style/Input"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/contrate_mensal"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/tv_adicionar"
        android:id="@+id/et_adicionar_mensal" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        style="@style/Input"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/et_adicionar_mensal"
        android:hint="@string/mes"
        android:id="@+id/et_adicionar_mes"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        style="@style/Input"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_adicionar_mes"
        android:inputType="number"
        android:hint="@string/ano"
        android:id="@+id/et_adicionar_ano"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_adicionar"
        style="@style/Botao"
        android:onClick="camposAdicionarOk"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_adicionar_ano"
        android:id="@+id/bt_post_adicionar" />


</androidx.constraintlayout.widget.ConstraintLayout>