<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Tela"
    tools:context=".TelaInvestir">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_acumulado"
        style="@style/Subtitulo"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/tv_acumulado"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_adicionar"
        style="@style/Botao"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_acumulado"
        android:onClick="irTelaAdicionar"
        android:id="@+id/bt_adicionar"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        style="@style/Input"
        android:layout_marginTop="50dp"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_adicionar"
        android:hint="@string/mes"
        android:id="@+id/et_pesquisar_mes" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        style="@style/Input"
        android:layout_marginTop="25dp"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_pesquisar_mes"
        android:hint="@string/ano"
        android:id="@+id/et_pesquisar_ano" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_procura_mes"
        style="@style/Botao"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="camposPesquisarOk"
        app:layout_constraintTop_toBottomOf="@+id/et_pesquisar_ano"
        android:id="@+id/bt_procurar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_procurar"
        android:id="@+id/sl_conteudo" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ll_todo_conteudo"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Texto"
                android:text="@string/sem_dados"
                android:id="@+id/tv_conteudo_home"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>