<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Tela"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_imagempais"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:src="@drawable/img_pais"
        style="@style/Texto"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/titulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Titulo"
        app:layout_constraintTop_toBottomOf="@+id/iv_imagempais"
        android:id="@+id/tv_titulo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:width="320dp"
        style="@style/Subtitulo"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
        android:id="@+id/tv_subtitulo"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        style="@style/Botao"
        android:onClick="Comecar"
        android:text="@string/bt_comecar"
        android:id="@+id/bt_comecar" />

    <ImageView
        android:id="@+id/iv_imagemhome"
        android:layout_width="412dp"
        android:layout_height="200dp"
        android:src="@mipmap/ipo1home"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sem_planos"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/tv_sem_planos"
        android:visibility="gone"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="Contratar"
        style="@style/Botao"
        android:text="@string/bt_contrate_plano"
        android:id="@+id/bt_contrate_plano"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>